Fixed according to review comments

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -253,9 +253,10 @@ Divide(
 
     <p>You should also visit</p>
     <ul>
-        <li><a href="http://doc.akka.io/docs/akka/2.2-M3/scala.html"
+        <li><a href="http://doc.akka.io/docs/akka/2.2.0-RC1/scala.html"
                target="_blank">The Akka documentation</a></li>
-        <li><a href="http://doc.akka.io/docs/akka/2.2-M3/scala/fault-tolerance.html"
+        <li><a
+               href="http://doc.akka.io/docs/akka/2.2.0-RC1/scala/fault-tolerance.html"
                target="_blank">Documentation of supervision</a></li>
         <li><a href="http://letitcrash.com" target="_blank">The Akka Team blog</a></li>
     </ul>
